[bumpversion]
current_version = 0.0.1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>\w+)\.(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}
commit = True
tag = False

[metadata]
description-file =
    README.md

[bumpversion:file:patton/__init__.py]

[bumpversion:file:docs/conf.py]

[bumpversion:file:Makefile]

[bumpversion:file:setup.py]

[bumpversion:file:VERSION]

[flake8]
exclude = build,.git,.tox
max-line-length = 119
