[bumpversion]
current_version = 0.0.3
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>\w+)\.(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}
commit = True
tag = True

[metadata]
description-file = 
	README.md

[bumpversion:file:patton/__init__.py]

[bumpversion:file:docs/conf.py]

[bumpversion:file:docs/overview/index.md]

[bumpversion:file:Makefile]

[bumpversion:file:VERSION]

[flake8]
exclude = build,.git,.tox
max-line-length = 119

